KC-920 ... needed to exclude some pom dependencies to fix convergence errors when KC was built

--- a/rice-middleware/ksb/client-impl/pom.xml
+++ b/rice-middleware/ksb/client-impl/pom.xml
@@ -150,6 +150,12 @@
     <dependency>
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-rt-ws-security</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.ws.security</groupId>
+          <artifactId>wss4j</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.cxf</groupId>
