--- a/pom.xml
+++ b/pom.xml
@@ -1996,6 +1996,10 @@
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>org.apache.ws.security</groupId>
+            <artifactId>wss4j</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
 
