--- a/config/checkstyle/pom.xml
+++ b/config/checkstyle/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.kuali.rice</groupId>
     <artifactId>rice-config</artifactId>
-   <version>2.5.3.0-kckualico</version>
+   <version>2.5.3.0-uh</version>
   </parent>
   <artifactId>rice-checkstyle</artifactId>
   <packaging>jar</packaging>
