--- a/db/sql/pom.xml
+++ b/db/sql/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.kuali.rice</groupId>
     <artifactId>rice-db</artifactId>
-   <version>2.5.3.0-kckualico</version>
+   <version>2.5.3.0-uh</version>
   </parent>
 
   <artifactId>rice-sql</artifactId>
