--- a/rice-middleware/core/api/pom.xml
+++ b/rice-middleware/core/api/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.kuali.rice</groupId>
     <artifactId>rice-core</artifactId>
-   <version>2.5.3.0-kckualico</version>
+   <version>2.5.3.0-uh</version>
   </parent>
   <artifactId>rice-core-api</artifactId>
 
