--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <packaging>pom</packaging>
   <name>Rice</name>
   <inceptionYear>2005</inceptionYear>
-  <version>2.5.3.1505.13-uh</version>
+  <version>2.5.3.1505.13-kckualico</version>
   <description>
     The Kuali Rice effort provides an enterprise class middleware suite of integrated products that allows
     both Kuali and non-Kuali applications
