KC-1222 Bitronix causing issue after 1508.3 upgrade

--- a/rice-middleware/core/impl/src/main/resources/org/kuali/rice/core/config/bitronix-default-config.properties
+++ b/rice-middleware/core/impl/src/main/resources/org/kuali/rice/core/config/bitronix-default-config.properties
@@ -15,3 +15,5 @@
 #
 
 bitronix.tm.allowMultipleLrc=true
+# KC-1222 Bitronix causing issue after 1508.3 upgrade
+bitronix.tm.timer.defaultTransactionTimeout=3600
