--- a/db/xml/pom.xml
+++ b/db/xml/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.kuali.rice</groupId>
     <artifactId>rice-db</artifactId>
-   <version>2.5.3.1509.0002-kualico</version>
+   <version>2.5.3.1509.0002-uh</version>
   </parent>
 
   <artifactId>rice-xml</artifactId>
