--- a/rice-middleware/ken/api/pom.xml
+++ b/rice-middleware/ken/api/pom.xml
@@ -20,10 +20,10 @@
   <parent>
     <artifactId>rice-ken</artifactId>
     <groupId>org.kuali.rice</groupId>
-    <version>2.5.3.1509.0002-kualico</version>
+    <version>2.5.3.1509.0002-uh</version>
   </parent>
   <artifactId>rice-ken-api</artifactId>
-  <version>2.5.3.1509.0002-kualico</version>
+  <version>2.5.3.1509.0002-uh</version>
   <name>Rice KEN API</name>
 
   <dependencies>
