--- a/rice-tools-test/pom.xml
+++ b/rice-tools-test/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <artifactId>rice</artifactId>
     <groupId>org.kuali.rice</groupId>
-   <version>2.5.3.1509.0002-kualico</version>
+   <version>2.5.3.1509.0002-uh</version>
   </parent>
   <artifactId>rice-tools-test</artifactId>
   <properties>
