--- a/rice-middleware/it/internal-tools/pom.xml
+++ b/rice-middleware/it/internal-tools/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.kuali.rice</groupId>
     <artifactId>rice-it</artifactId>
-   <version>2.5.3.1512.0004-uh</version>
+   <version>2.5.3.1512.0004-kualico</version>
   </parent>
   <artifactId>rice-it-internal-tools</artifactId>
 
