--- a/rice-framework/krad-web/pom.xml
+++ b/rice-framework/krad-web/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.kuali.rice</groupId>
     <artifactId>rice-framework</artifactId>
-   <version>2.5.3.1601.0002-kualico</version>
+   <version>2.5.3.1601.0002-uh</version>
   </parent>
 
   <artifactId>rice-krad-web</artifactId>
