--- a/rice-middleware/kim/pom.xml
+++ b/rice-middleware/kim/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>rice-middleware</artifactId>
         <groupId>org.kuali.rice</groupId>
-        <version>2.5.3.1601.0002-kualico</version>
+        <version>2.5.3.1601.0002-uh</version>
     </parent>
     <artifactId>rice-kim</artifactId>
 
