--- a/rice-middleware/it/kcb/pom.xml
+++ b/rice-middleware/it/kcb/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.kuali.rice</groupId>
     <artifactId>rice-it</artifactId>
-   <version>2.5.3.1603.0001-kualico</version>
+   <version>2.5.3.1603.0001-uh</version>
   </parent>
   <artifactId>rice-it-kcb</artifactId>
 
