--- a/rice-middleware/core/web/pom.xml
+++ b/rice-middleware/core/web/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>rice-core</artifactId>
         <groupId>org.kuali.rice</groupId>
-        <version>2.5.3.1603.0001-uh</version>
+        <version>2.5.3.1603.0001-kualico</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
