--- a/db/impex/client/pom.xml
+++ b/db/impex/client/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.kuali.rice</groupId>
     <artifactId>rice-impex</artifactId>
-   <version>2.5.3.1603.0003-kualico</version>
+   <version>2.5.3.1603.0003-uh</version>
   </parent>
 
   <artifactId>rice-impex-client</artifactId>
