--- a/rice-middleware/core-service/web/pom.xml
+++ b/rice-middleware/core-service/web/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>rice-core-service</artifactId>
         <groupId>org.kuali.rice</groupId>
-        <version>2.5.3.1603.0003-kualico</version>
+        <version>2.5.3.1603.0003-uh</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
