--- a/rice-middleware/kim/kim-ldap/pom.xml
+++ b/rice-middleware/kim/kim-ldap/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.kuali.rice</groupId>
     <artifactId>rice-kim</artifactId>
-   <version>2.5.3.1603.0003-kualico</version>
+   <version>2.5.3.1603.0003-uh</version>
   </parent>
   <artifactId>rice-kim-ldap</artifactId>
 
