--- a/rice-middleware/serviceregistry/pom.xml
+++ b/rice-middleware/serviceregistry/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.kuali.rice</groupId>
     <artifactId>rice-middleware</artifactId>
-   <version>2.5.3.1603.0003-kualico</version>
+   <version>2.5.3.1603.0003-uh</version>
   </parent>
   <artifactId>rice-serviceregistry</artifactId>
 	<packaging>war</packaging>
