--- a/rice-middleware/kew/framework/pom.xml
+++ b/rice-middleware/kew/framework/pom.xml
@@ -20,10 +20,10 @@
   <parent>
     <artifactId>rice-kew</artifactId>
     <groupId>org.kuali.rice</groupId>
-    <version>2.5.3.1609.0004-kualico</version>
+    <version>2.5.3.1609.0004-uh</version>
   </parent>
   <artifactId>rice-kew-framework</artifactId>
-  <version>2.5.3.1609.0004-kualico</version>
+  <version>2.5.3.1609.0004-uh</version>
   <name>Rice KEW Framework</name>
 
   <dependencies>
