--- a/db/impex/client/demo/pom.xml
+++ b/db/impex/client/demo/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.kuali.rice</groupId>
     <artifactId>rice-impex-client</artifactId>
-   <version>2.5.3.1612.0001-kualico</version>
+   <version>2.5.3.1612.0001-uh</version>
   </parent>
 
   <artifactId>rice-impex-client-demo</artifactId>
